--- a/Netflix/AppShell.xaml
+++ b/Netflix/AppShell.xaml
@@ -10,9 +10,24 @@
     <TabBar>
         <ShellContent
             Title="Home"
-            Icone="hometab"
-            ContentTemplate="{DataTemplate local:MainPage}"
+            Icon="hometab"
+            ContentTemplate="{DataTemplate pages:MainPage}"
             Route="MainPage" />
+        <ShellContent
+            Title="Games"
+            Icon="game"
+            ContentTemplate="{DataTemplate pages:MainPage}"
+            Route="MainPage1" />
+        <ShellContent
+            Title="New &amp; Hot"
+            Icon="brand_netflix"
+            ContentTemplate="{DataTemplate pages:MainPage}"
+            Route="MainPage2" />
+        <ShellContent
+            Title="Downloads"
+            Icon="download"
+            ContentTemplate="{DataTemplate pages:MainPage}"
+            Route="MainPage3" />
     </TabBar>
     
 
