--- a/Netflix/AppShell.xaml
+++ b/Netflix/AppShell.xaml
@@ -4,6 +4,9 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:pages="clr-namespace:Netflix.Pages"
+    Shell.TabBarBackgroundColor="Black"
+    Shell.TabBarTitleColor="White"
+    Shell.TabBarUnselectedColor="#545454"
     Shell.FlyoutBehavior="Disabled"
     Title="Netflix">
 
