--- a/Netflix/Pages/MainPage.xaml
+++ b/Netflix/Pages/MainPage.xaml
@@ -48,6 +48,9 @@
                                    Style="{StaticResource MenuLabel}"/>
                             <Label Text="Categories"
                                    Style="{StaticResource MenuLabel}">
+                                <Label.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="CategoriesMenu_Tapped"/>
+                                </Label.GestureRecognizers>
                             </Label>
                         </FlexLayout>
                     </Grid>
