--- a/Netflix/Pages/DetailsPag.xaml
+++ b/Netflix/Pages/DetailsPag.xaml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:vm="clr-namespace:Netflix.ViewModels"
              x:Class="Netflix.Pages.DetailsPag"
+             xmlns:models="clr-namespace:Netflix.Models"
+             xmlns:services="clr-namespace:Netflix.Services"
+             x:DataType="vm:DetailsViewModel"
+             BackgroundColor="Black"
+             Shell.BackgroundColor="Black"
              Title="DetailsPag">
+    
+    
  <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Label" x:Key="sub">
