--- a/Netflix/Controls/MovieInfoBox.xaml
+++ b/Netflix/Controls/MovieInfoBox.xaml
@@ -7,7 +7,8 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Name="this"
              Padding="0"
-             Margin="0">
+             Margin="0"
+             >
 
     <ContentView.Resources>
         <ResourceDictionary>
@@ -63,6 +64,7 @@
                       Grid.Column="1"
                       ColumnDefinitions="*, Auto">
                     <Label Grid.Column="0"
+                           TextColor="White"
                            Text="{Binding Media.DisplayTitle, FallbackValue='Movie Title'}"
                            FontSize="17"
                            LineBreakMode="CharacterWrap"/>
@@ -82,12 +84,14 @@
                 </Grid>
 
                 <Label Grid.Row="1"
+                       
                        Grid.Column="1"
                        Text="{Binding Media.ReleaseDate}"
                        FontSize="10"
                        TextColor="#9d9d9d"/>
 
                 <Label Grid.Row="2"
+                       TextColor="White"
                        Grid.Column="1"
                        Text="{Binding Media.Overview}"
                        FontSize="11"
